--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>组件</title>
+  <link rel="stylesheet" href="/src todos/static/css/base.css">
+  <link rel="stylesheet" href="/src search/static/css/bootstrap.css">
+
+  
 </head>
 <body>
   <div id='root'></div>
